--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -362,7 +362,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Oswald", sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #222429;
